tests/ui/internal/internal-unstable.stderr
error[E0658]: use of unstable library feature 'function'
  --> $DIR/internal-unstable.rs:41:25
   |
LL |     pass_through_allow!(internal_unstable::unstable());
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(function)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'function'
  --> $DIR/internal-unstable.rs:43:27
   |
LL |     pass_through_noallow!(internal_unstable::unstable());
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(function)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'function'
  --> $DIR/internal-unstable.rs:47:22
   |
LL |     println!("{:?}", internal_unstable::unstable());
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(function)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'function'
  --> $DIR/internal-unstable.rs:49:10
   |
LL |     bar!(internal_unstable::unstable());
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(function)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'function'
  --> $DIR/internal-unstable.rs:19:9
   |
LL | / macro_rules! foo {
LL | |     ($e: expr, $f: expr) => {{
LL | |         $e;
LL | |         $f;
LL | |         internal_unstable::unstable();
   | |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | |     }}
LL | | }
   | |_- in this expansion of `foo!` (#2)
...
LL | / macro_rules! bar {
LL | |     ($e: expr) => {{
LL | /         foo!($e,
LL | |              internal_unstable::unstable());
   | |___________________________________________- in this macro invocation (#2)
LL |           internal_unstable::unstable();
LL | |     }}
LL | | }
   | |_- in this expansion of `bar!` (#1)
...
LL |       bar!(internal_unstable::unstable());
   |       ----------------------------------- in this macro invocation (#1)
   |
   = help: add `#![feature(function)]` to the crate attributes to enable

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0658`.
